# MICROSSERVICO-ESTOQUE

./: .gitignore  LICENSE  README.md
docs/: index.html  openapi.json
estoque-service/: .env.template  Dockerfile  docker-compose.yml  pyproject.toml
estoque-service/init-scripts/: 00-init.sh  99-grant-permissions.sql  tabelas.sql  users.sh
estoque-service/src/: database.py  main.py  model.py  schemas.py  utils.py
estoque-service/src/controllers/: addEstoque.py  deleteProduto.py  deleteReserva.py  getEstoqueProduto.py  getProdutos.py  getReserva.py  postProduto.py  postReserva.py  removeEstoque.py
