[project]
name = "estoque-service"
version = "0.1.0"
description = ""
authors = [
    {name = "FagundesMatheus",email = "fagundes2@discente.ufg.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "confluent-kafka (>=2.12.2,<3.0.0)",
    "fastapi (>=0.100.0,<0.200.0)",
    "uvicorn[standard] (>=0.22.0,<1.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

